# CapyShell

./: .gitignore  .todo  Cargo.toml  README.md  ROADMAP.md  build.rs  packages.txt
.cargo/: config.toml
.github/workflows/: ci.yml
crates/capy-apps/: .todo  Cargo.toml
crates/capy-apps/src/: catalog.rs  desktop_entry.rs  icons.rs  lib.rs  paths.rs
crates/capy-mpris/: .todo  Cargo.toml
crates/capy-mpris/src/: client.rs  error.rs  lib.rs  sources.rs  types.rs
crates/capy-wm/: Cargo.toml  ROADMAP.md
crates/capy-wm/src/: README.md  lib.rs  types.rs  window_backend.rs
crates/capy-wm/src/hyprland/: active_window.rs  mod.rs  workspaces.rs
material-1.0/ui/components/: state_layer.slint
material-1.0/ui/icons/: icons.slint
scripts/: rename_icons.py  setup-service.sh
src/: event_bus.rs  icons.rs  main.rs
src/functions/: formatting.rs
src/panel_manager/: factory.rs  mod.rs
src/panels/: media_selector.rs  mod.rs  taskbar.rs
src/panels/taskbar/: active_window.rs  battery.rs  bluetooth.rs  clock.rs  distro_icon.rs  events.rs  hyprland_events.rs  media.rs  mod.rs  mpris.rs  network.rs  taskbar.rs  tbSpawner.rs  volume.rs  workspaces.rs
src/services/: apps.rs  battery.rs  bluetooth.rs  hyprland.rs  media.rs  mod.rs  network.rs  system_info.rs  volume.rs  wm.rs  workspaces.rs
src/services/hyprland/: hotplug.rs  workspaces.rs
src/services/wm/: hyprland_wm.rs  types.rs
src/services/wm/hyprland_wm/: active_window.rs  hotplug.rs  icon.rs  workspaces.rs
ui/: capyshell.slint  osd.slint  slider.slint
ui/components/: carousel.slint  progressBar.slint  visualizer.slint
ui/panels/media_selector/: media_selector.slint
ui/panels/taskbar/: actionsButton.slint  activeWindow.slint  battery.slint  bluetooth.slint  clock.slint  distroIcon.slint  media.slint  network.slint  taskbar.slint  volume.slint  workspaces.slint
ui/panels/taskbar/media/: mediaButton.slint  mediaDataStruct.slint  progressBar.slint  stateControls.slint  stateMetadata.slint  stateNormal.slint  timeFormatting.slint
