[package]
name = "CapyShell"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rust
chrono = "0.4"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"

# UI
slint = { version = "1.14.1", features = ["renderer-software"] }
# spell-framework = { git = "https://github.com/dotsem/Spell" }
spell-framework = { path = "../Spell/spell-framework" }

# System info
sysinfo = "0.32"
hyprland = "0.4.0-beta.3"
battery = "0.7"
libpulse-binding = "2.28"
nmrs = "1.1"
bluer = { version = "0.17", features = ["bluetoothd"] }
walkdir = "2"
mpris = "2.0"
image = "0.24"
sha2 = "0.10"
hex = "0.4"
ureq = "2"

# MSG
zbus = "4"
crossbeam-channel = "0.5"

[build-dependencies]
slint-build = "1.14.1"

[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }
# spell-framework = { git = "https://github.com/VimYoung/Spell" }

[profile.release]
lto = true
# codegen-units = 1 # slower compile time
opt-level = 3
