[package]
name = "capy-apps"
version = "0.1.0"
edition = "2024"
description = "App catalog and icon resolver for Linux desktops"
license = "MIT"

[dependencies]
log = "0.4"
notify = "8.0.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
tokio = { version = "1", features = ["sync"] }
